--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,6 @@ p{
 /* 
 game
 */
-.game{}
 .scores{
   display: flex;
   justify-content: space-around;
@@ -62,17 +61,13 @@ game
 .player-score{
   text-align: center;
 }
-.player-score-title{}
-.js-player-score{}
 .computer-score{
   text-align: center;
 }
-.js-computer-scire{}
-.top-hero{}
 .game-title{
   text-align: center;
   font-size: 50px;
-  margin-top: 10vh;
+  margin-top: 15vh;
 }
 .start-button,
 .rock,
@@ -97,6 +92,7 @@ fight
 */
 .fight{
   display: none;
+  margin-top: 10vh;
 }
 .fight-title{
   text-align: center;
@@ -109,7 +105,6 @@ fight
 .player-hand{
   transform: rotateY(180deg);
 }
-.computer-hand{}
 .options{
   margin: 0 22%;
   margin-top: 5vh;
@@ -117,6 +112,63 @@ fight
   grid-template-columns: repeat(3,1fr);
   vertical-align: middle;
 }
-.rock{}
-.paper{}
-.scissors{}
+
+@keyframes shakePlayer {
+  0% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+  15% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
+  25% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+  35% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
+  50% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+  65% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
+  75% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+  85% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
+  100% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+}
+
+@keyframes shakeComputer {
+  0% {
+    transform: translateY(0px);
+  }
+  15% {
+    transform: translateY(-50px);
+  }
+  25% {
+    transform: translateY(0px);
+  }
+  35% {
+    transform: translateY(-50px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  65% {
+    transform: translateY(-50px);
+  }
+  75% {
+    transform: translateY(0px);
+  }
+  85% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
